playing live video on video ready

--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -44,14 +44,16 @@
   <script>
     window.onload = function () {
 
-      if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-        console.log("mobile"); 
-      } else {
-      }
+      // if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+      //   console.log("mobile"); 
+      // } else {
+      // }
       videojs.options.flash.swf = '/static/lib/video-js/video-js.swf';
             // initialize the player
-      var player = videojs("live");
-      
+      videojs("live").ready(function(){
+        var player = this;
+
+      player.play(); 
 
     }
 
