playing live video on video ready

--- a/application/templates/live.html
+++ b/application/templates/live.html
@@ -48,7 +48,7 @@
               // initialize the player
       videojs("live").ready(function(){
         var player = this;
-        player.play(); 
+        // player.play(); 
       });
     }
 
