--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% block head %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,6 +15,7 @@
       <script src="/static/lib/moment/moment.min.js" type="text/javascript"></script>
       <link href="/static/lib/video-js/video-js.min.css" rel="stylesheet">
       <script src="/static/lib/video-js/video.js"></script>
+    {% endblock %}
   </head>
   <body>
    <nav class="navbar navbar-default">
