--- a/application/templates/mobile_editor.html
+++ b/application/templates/mobile_editor.html
@@ -1,14 +1,15 @@
 {% extends "layout.html" %}
  
-{% block content %}
-
-{% block javascript %}
-	<script src="/static/lib/p5/p5.js" type="text/javascript"></script>
+{% block head %}
+	{{ super() }}
+    <script src="/static/lib/p5/p5.js" type="text/javascript"></script>
     <script src="/static/lib/p5/p5.dom.js" type="text/javascript"></script>
     <script src="/static/js/mobile_editor.js" type="text/javascript"></script>
     <script src="/static/js/editor_helpers.js" type="text/javascript"></script>
      <script src="/static/js/editor_api.js" type="text/javascript"></script>
 {% endblock %}
+
+{% block content %}
 
     <div class="row">
         <div class="col-md-6 col-md-offset-3" id="canvas-holder"></div>
