didn't play nice with jinja

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
  
-{% block head %}
+<!-- {% block head %}
     <style>
         .row-fluid{
             white-space: nowrap;
@@ -37,7 +37,7 @@
     //show thumbnails + date, investgation question with links to view page
     </script>
 
-{% endblock %}
+{% endblock %} -->
 
 {% block content %}
 
