adding placeholder text to divs

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -8,11 +8,11 @@
   <button type="button" id="markers" class="btn btn-default" onClick="show('markers')">Markers</button>
 </div>
 
-<div id="investigations"></div>
+<div id="investigations">Investigations</div>
 
-<div id="conjectures"></div>
+<div id="conjectures">Conjectures</div>
 
-<div id="markers"></div> 
+<div id="markers">Markers</div> 
 
 
 {% block javascript %}
