--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -31,9 +31,9 @@
 {% block content %}
 
 <div class="btn-group" role="group" aria-label="...">
-  <button type="button" id="investigations"class="btn btn-default" onClick="show('investigations')">Investigations</button>
-  <button type="button" id="conjectures" class="btn btn-default" onClick="show('conjectures')">Conjectures</button>
-  <button type="button" id="markers" class="btn btn-default" onClick="show('markers')">Markers</button>
+  <button type="button" class="btn btn-default" onClick="show('investigations')">Investigations</button>
+  <button type="button" class="btn btn-default" onClick="show('conjectures')">Conjectures</button>
+  <button type="button" class="btn btn-default" onClick="show('markers')">Markers</button>
 </div>
 
 <div id="investigations">Investigations</div>
