--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -5,17 +5,17 @@
 <script>
     function show(vidtype){
         if(vidtype === "invesitgations"){
-            document.getElementById("invesitgations").style.display = 'block';
+            document.getElementById("investigations").style.display = 'block';
             document.getElementById("conjectures").style.display = 'none';
             document.getElementById("markers").style.display = 'none';
 
         } else if (vidtype === "conjectures"){
             document.getElementById("conjectures").style.display = 'block';
-            document.getElementById("invesitgations").style.display = 'none';
+            document.getElementById("investigations").style.display = 'none';
             document.getElementById("markers").style.display = 'none';
         } else if (vidtype === "markers"){
             document.getElementById("markers").style.display = 'block';
-            document.getElementById("invesitgations").style.display = 'none';
+            document.getElementById("investigations").style.display = 'none';
             document.getElementById("conjectures").style.display = 'none';
         }
     }
