cleaned up video service to only delete files if over time, changed models for video and marker relationship to investigations

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -4,7 +4,7 @@
 {{ super() }}
 <script>
     function show(vidtype){
-        if(vidtype === "invesitgations"){
+        if(vidtype === "investigations"){
             document.getElementById("investigations").style.display = 'block';
             document.getElementById("conjectures").style.display = 'none';
             document.getElementById("markers").style.display = 'none';
