testing div on load callbacks

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -46,6 +46,7 @@
 <script>
     $("div").on("load", function(e){
         var id_name = $(this).attr('id');
+        console.log(id_name);
     });
 
 
