--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -44,6 +44,7 @@
 
 {% block javascript %}
 <script>
+    console.log("this is getting called");
     $("div").on("load", function(e){
         var id_name = $(this).attr('id');
         console.log(id_name);
