testing div on load callbacks

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -45,7 +45,7 @@
 
 <script>
     console.log("this is getting called");
-    $("div").on("load", function(e){
+    $("div").on("click", function(e){
         var id_name = $(this).attr('id');
         console.log(id_name);
     });
