working on top level callbacks for content loading

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -20,9 +20,9 @@
     }
 </script>
 <style>
-#investigations {display: block;}
+/*#investigations {display: block;}
 #conjectures {display: none;}
-#markers {display: none;}
+#markers {display: none;}*/
 </style>
 {% endblock %}
 
