--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -44,7 +44,7 @@
 
 <script>
     console.log("this is getting called");
-    $("div").on("click", function(e){
+    $("button").on("click", function(e){
         var id_name = $(this).attr('id');
         console.log(id_name);
     });
