add content to div

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -47,7 +47,7 @@
     $("button").on("click", function(e){
         var id_name = $(this).attr('id');
         console.log(id_name);
-        vid_div = document.getElementById("#videos");
+        vid_div = document.getElementById("videos");
         vid_div.innerHTML=id_name;
 
 
