--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -18,7 +18,7 @@
             document.getElementById("conjectures").style.display = 'none';
         }
     }
-
+    console.log("bleh")
     function show_videos(){
         console.log("videos loaded!");
     };
@@ -47,7 +47,9 @@
 
 
 <script>
-    
+    $(document).ready(function() {
+        $('#videos').load('investigations');
+    }
     $("button").on("click", function(e){
         var id_name = $(this).attr('id');
         console.log(id_name);
