--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -48,7 +48,7 @@
 
 <script>
     $(document).ready(function() {
-        $('#videos').load('investigations');
+        $('#videos').text('investigations');
     });
     $("button").on("click", function(e){
         var id_name = $(this).attr('id');
