screw ajax, going with base class

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -60,8 +60,7 @@
                 console.log(responseJson);
             }
         }
-
-        
+        req.send();
     });
     $("button").on("click", function(e){
         var id_name = $(this).attr('id');
