--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -48,17 +48,16 @@
 
 <script>
     $(document).ready(function() {
-        get_data('schedule');
+        update_video('schedule');
     });
     $("button").on("click", function(e){
         var id_name = $(this).attr('id');
-        console.log(id_name);
-        vid_div = document.getElementById("videos");
-        vid_div.innerHTML=id_name;
-
-
+        // console.log(id_name);
+        // vid_div = document.getElementById("videos");
+        // vid_div.innerHTML=id_name;
+        update_video(id_name);
     });
-    function get_data(endpoint){
+    function update_video(endpoint){
         url = "/api/" + endpoint;
         var req = new XMLHttpRequest();
         req.open("GET", url);
