--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -4,12 +4,10 @@
 {{ super() }}
 <script>
     $(document).ready(function() {
-        update_video('schedule');
+        retrieve_data();
     });
 </script>
 {% endblock %}
-
-
 
 {% block content %}
 
@@ -19,45 +17,39 @@
   <button type="button" class="btn btn-default" id='marker'>Markers</button>
 </div>
 
-<div id="videos" onload="show_videos()"></div>
-
-<!-- <div id="conjectures">Conjectures</div>
-
-<div id="markers">Markers</div>  -->
+<div id="videos"></div>
 
 
 <script>
-    // $(document).ready(function() {
-    //     update_video('schedule');
-    // });
     $("button").on("click", function(e){
         var id_name = $(this).attr('id');
-        // console.log(id_name);
-        // vid_div = document.getElementById("videos");
-        // vid_div.innerHTML=id_name;
-        update_video(id_name);
+        retrieve_data(id_name);
     });
-    function update_video(endpoint){
+    
+    function retrieve_data(endpoint){
+        endpoint = typeof endpoint !== 'undefined' ? endpoint : 'investigation';
         url = "/api/" + endpoint;
         var req = new XMLHttpRequest();
         req.open("GET", url);
         req.setRequestHeader("Content-type", "application/json");
         req.onreadystatechange = function() {
-              // if you got a good request:
-              if(req.readyState == 4 && req.status == 200) {
+            // if you got a good request:
+            if(req.readyState == 4 && req.status == 200) {
                 // the response is a JSON object. Parse it:
                 responseJson = JSON.parse(req.responseText);
-                $('#videos').text(JSON.stringify(responseJson));
-                console.log(responseJson);
+                get_video_html(responseJson);
+                
+
+                // $('#videos').text(JSON.stringify(responseJson));
             }
         }
         req.send();
-
     }
+
+    function get_video_html(){
+        console.log(responseJson);
+    }
+
 </script>
-
-
-
-
 
 {% endblock %}
