starting to process data to display videos

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -46,9 +46,10 @@
     }
 
     function get_video_html(data){
-        for (obj in data){
-            console.log(data[obj]);
-        }
+        console.log(data);
+        // for (obj in data){
+        //     console.log(data[obj]);
+        // }
     }
 
 </script>
