got an idea of how to deal with high level filters

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -46,10 +46,10 @@
     }
 
     function get_video_html(data){
-        console.log(data);
-        // for (obj in data){
-        //     console.log(data[obj]);
-        // }
+        console.log(data.objects);
+        //for (obj in data.objects){
+        //    data.objects[obj].question;
+        //}
     }
 
 </script>
