break down the investigation object

--- a/application/templates/videos.html
+++ b/application/templates/videos.html
@@ -46,15 +46,15 @@
     }
 
     function get_video_html(data){
-        // console.log(data.objects.question);
-        // if ( data.objects.question !== undefined ){
-        //     console.log(data.objects.question)
-        // }
 
         for (obj in data.objects){
-           if ( data.objects[obj].question ) {
-                console.log("questions");
+           if ( data.objects[obj].hasOwnProperty('question')) {
+                console.log(data.objects[obj].question);
+                for (recording in data.objects[obj].schedule){
+                    console.log(data.objects[obj].schedule[recording]);
+                }
            }
+           if (data.objects[obj])
         }
     }
 
